--- a/index.html
+++ b/index.html
@@ -39,24 +39,26 @@
         </div>
     </header>
 
-    <div class="apps container">
-        <div class="row">
-            <div class="col-md-5 my-auto mx-auto">
-                <img src="./assets/images/logo.png" alt="Shinyu">
-            </div>
-            <div class="col-md-2 spacer my-auto"></div>
-            <div class="col-md-5 my-auto">
-                <p>
-                    [shin-yuu] <br>
-                    best friend, other half <br>
-                    one who will always be there for you <br>
-                    one you can trust
-                </p>
-            </div>
-            <div class="col-md-12">
-                <div class="apps-bottom">
-                    <img src="./assets/images/ios-appstore-logo.svg" alt="">
-                    <img src="./assets/images/android-badge.svg" alt="">
+    <div class="apps">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5 my-auto mx-auto">
+                    <img src="./assets/images/logo.png" alt="Shinyu">
+                </div>
+                <div class="col-md-2 spacer my-auto"></div>
+                <div class="col-md-5 my-auto">
+                    <h4>
+                        [shin-yuu] <br>
+                        best friend, other half <br>
+                        one who will always be there for you <br>
+                        one you can trust
+                    </h4>
+                </div>
+                <div class="col-md-12">
+                    <div class="apps-bottom">
+                        <img src="./assets/images/ios-appstore-logo.svg" alt="">
+                        <img src="./assets/images/android-badge.svg" alt="">
+                    </div>
                 </div>
             </div>
         </div>
@@ -66,7 +68,7 @@
         <article class="article-1">
             <div class="container">
                 <div class="row my-auto">
-                    <div class="col-md-6 my-auto mx-auto text-center">
+                    <div class="col-md-6 my-auto ml-auto">
                         <img src="./assets/images/article-section-1.png" alt="">
                     </div>
                     <div class="col-md-6">
@@ -95,7 +97,7 @@
                         </p>
                         <p> We’ve done all the digging, so you don’t have to. That’s what best friends are for.</p>
                     </div>
-                    <div class="col-md-6 img mx-auto text-center my-auto">
+                    <div class="col-md-6 img text-right my-auto">
                         <img src="./assets/images/article-section-2.png" alt="">
                     </div>
                 </div>
@@ -128,37 +130,38 @@
                 </div>
             </div>
         </div>
-    </div>
-
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner text-center">
-            <div class="carousel-item active">
-                <div class="connecting-card">
-                    <img src="./assets/images/request.svg" alt="">
-                    <h2>Request</h2>
-                    <p>Tell us who, when, and where. Right this minute, or next Tuesday afternoon.</p>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner text-center">
+                <div class="carousel-item active">
+                    <div class="connecting-card">
+                        <img src="./assets/images/request.svg" alt="">
+                        <h2>Request</h2>
+                        <p>Tell us who, when, and where. Right this minute, or next Tuesday afternoon.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="carousel-item">
-                <div class="connecting-card">
-                    <img src="./assets/images/book.svg" alt="">
-                    <h2>Book</h2>
-                    <p>Tell us who, when, and where. Right this minute, or next Tuesday afternoon.</p>
+                <div class="carousel-item">
+                    <div class="connecting-card">
+                        <img src="./assets/images/book.svg" alt="">
+                        <h2>Book</h2>
+                        <p>Tell us who, when, and where. Right this minute, or next Tuesday afternoon.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="carousel-item">
-                <div class="connecting-card">
-                    <img src="./assets/images/follow-along.svg" alt="">
-                    <h2>Follow Along</h2>
-                    <p>Join the walk each step of the way, & check-in live from a new perspective with Shinyu View.</p>
+                <div class="carousel-item">
+                    <div class="connecting-card">
+                        <img src="./assets/images/follow-along.svg" alt="">
+                        <h2>Follow Along</h2>
+                        <p>Join the walk each step of the way, & check-in live from a new perspective with Shinyu View.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
+
     </div>
 
     <div class="categories">
@@ -283,9 +286,13 @@
     <div class="bottom-banner text-center">
         <img src="./assets/images/article-section-5.png" alt="">
         <h2>You get to know.</h2>
-        <div class="apps">
-            <img src="./assets/images/ios-appstore-logo.svg" alt="">
-            <img src="./assets/images/android-badge.svg" alt="">
+        <div class="row">
+            <div class="col-md-6">
+                <img src="./assets/images/ios-appstore-logo.svg" alt="">
+            </div>
+            <div class="col-md-6">
+                <img src="./assets/images/android-badge.svg" alt="">
+            </div>
         </div>
     </div>
 
