Changed font size

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 <div class="col-md-5 mx-auto my-auto text-center">
                     <img src="./assets/images/phone.png" alt="">
                 </div>
-                <div class="col-md-7 my-auto px-5">
+                <div class="col-md-7 my-auto">
                     <h2>Introducing Shinyu View</h2>
                     <h1>Our technology puts you right there, no matter where you actually are.</h1>
                     <p>Shinyu is the only app available where you don’t have to hope your best friend is happy and
