added swipe gesture

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-5 my-auto mx-auto">
-                    <img src="./assets/images/logo.png" alt="Shinyu">
+                    <img src="./assets/images/logo.png" alt="Shinyu" class="img-responsive">
                 </div>
                 <div class="col-md-2 spacer my-auto"></div>
                 <div class="col-md-5 my-auto">
@@ -56,8 +56,8 @@
                 </div>
                 <div class="col-md-12">
                     <div class="apps-bottom">
-                        <img src="./assets/images/ios-appstore-logo.svg" alt="">
-                        <img src="./assets/images/android-badge.svg" alt="">
+                        <img src="./assets/images/ios-appstore-logo.svg" alt="Shinyu" class="img-responsive">
+                        <img src="./assets/images/android-badge.svg" alt="Shinyu" class="img-responsive">
                     </div>
                 </div>
             </div>
@@ -69,7 +69,7 @@
             <div class="container">
                 <div class="row my-auto">
                     <div class="col-md-6 my-auto ml-auto">
-                        <img src="./assets/images/article-section-1.png" alt="">
+                        <img src="./assets/images/article-section-1.png" alt="Shinyu" class="img-responsive">
                     </div>
                     <div class="col-md-6">
                         <h2>Our dogs are our best friends.</h2>
@@ -98,7 +98,7 @@
                         <p> We’ve done all the digging, so you don’t have to. That’s what best friends are for.</p>
                     </div>
                     <div class="col-md-6 img text-right my-auto">
-                        <img src="./assets/images/article-section-2.png" alt="">
+                        <img src="./assets/images/article-section-2.png" alt="Shinyu" class="img-responsive">
                     </div>
                 </div>
             </div>
@@ -110,21 +110,21 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="connecting-card">
-                    <img src="./assets/images/request.svg" id="img1" alt="">
+                    <img src="./assets/images/request.svg" id="img1" alt="Shinyu" class="img-responsive">
                     <h2>Request</h2>
                     <p>Tell us who, when, and where. Right this minute, or next Tuesday afternoon.</p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="connecting-card">
-                    <img src="./assets/images/book.svg" id="img2" alt="">
+                    <img src="./assets/images/book.svg" id="img2" alt="Shinyu" class="img-responsive">
                     <h2>Book</h2>
                     <p>Tell us who, when, and where. Right this minute, or next Tuesday afternoon.</p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="connecting-card">
-                    <img src="./assets/images/follow-along.svg" id="img3" alt="">
+                    <img src="./assets/images/follow-along.svg" id="img3"alt="Shinyu" class="img-responsive">
                     <h2>Follow Along</h2>
                     <p>Join the walk each step of the way, & check-in live from a new perspective with Shinyu View.</p>
                 </div>
@@ -137,16 +137,16 @@
                 <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner text-center">
-                <div class="carousel-item active">
+                <div class="carousel-item active" id="test">
                     <div class="connecting-card">
-                        <img src="./assets/images/request.svg" alt="">
+                        <img src="./assets/images/request.svg" alt="Shinyu" class="img-responsive">
                         <h2>Request</h2>
                         <p>Tell us who, when, and where. Right this minute, or next Tuesday afternoon.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="connecting-card">
-                        <img src="./assets/images/book.svg" alt="">
+                        <img src="./assets/images/book.svg" alt="Shinyu" class="img-responsive">
                         <h2>Book</h2>
                         <p>Tell us who, when, and where. Right this minute, or next Tuesday afternoon.</p>
                     </div>
@@ -210,7 +210,7 @@
                     </p>
                 </div>
                 <div class="col-md-6 text-center mx-auto my-auto">
-                    <img src="./assets/images/article-section-3.png" alt="" class="img-responsive">
+                    <img src="./assets/images/article-section-3.png" alt="Shinyu" class="img-responsive">
                 </div>
             </div>
         </div>
@@ -230,7 +230,7 @@
                 </div>
             </div>
             <div class="text-center mx-auto">
-                <img src="./assets/images/dog-path.svg" alt="" class="img-responsive">
+                <img src="./assets/images/dog-path.svg" alt="Shinyu" class="img-responsive">
             </div>
         </div>
     </div>
@@ -243,7 +243,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center mx-auto my-auto">
-                    <img src="./assets/images/article-section-6.jpeg" alt="">
+                    <img src="./assets/images/article-section-6.jpeg" alt="Shinyu" class="img-responsive">
                 </div>
                 <div class="col-md-6">
                     <h1>The Shinyu Walk-Through</h1>
@@ -270,7 +270,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-5 mx-auto my-auto text-center">
-                    <img src="./assets/images/phone.png" alt="">
+                    <img src="./assets/images/phone.png" alt="Shinyu" class="img-responsive">
                 </div>
                 <div class="col-md-7 my-auto">
                     <h2>Introducing Shinyu View</h2>
@@ -284,14 +284,14 @@
     </div>
 
     <div class="bottom-banner text-center">
-        <img src="./assets/images/article-section-5.png" id="bottomBannerImg" alt="">
+        <img src="./assets/images/article-section-5.png" id="bottomBannerImg" alt="Shinyu" class="img-responsive">
         <h2>You get to know.</h2>
         <div class="row">
             <div class="col-md-6">
-                <img src="./assets/images/ios-appstore-logo.svg" alt="">
+                <img src="./assets/images/ios-appstore-logo.svg" alt="Shinyu" class="img-responsive">
             </div>
             <div class="col-md-6">
-                <img src="./assets/images/android-badge.svg" alt="">
+                <img src="./assets/images/android-badge.svg" alt="Shinyu" class="img-responsive">
             </div>
         </div>
     </div>
@@ -343,7 +343,21 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>
+
+    <!--Swipe Gesture-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.4/jquery.touchSwipe.min.js"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.4/jquery.touchSwipe.min.js"
+        crossorigin="anonymous"></script>
+    <script>
+        $(".carousel").swipe({
+            swipe: function (event, direction, distance, duration, fingerCount, fingerData) {
+                if (direction == 'left') $(this).carousel('next');
+                if (direction == 'right') $(this).carousel('prev');
+            },
+            allowPageScroll: "vertical"
+        });
+    </script>
 
     <!-- 
         GSAp CDN
